<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar-conversions</name>
  <version>0.0.0</version>
  <description>Provides util methods for converting between lidar_msgs and pointcloud2</description>
  <author email="ussama.naal@ouster.io">Ussama Naal</author>
  <maintainer email="ussama.naal@ouster.io">Ussama Naal</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>lidar_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
